added Gemfiles for different ActiveRecord versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,8 @@ rvm:
   - 2.1.1
   - 2.0.0
   - 1.9.3
+
+gemfile:
+  - Gemfile
+  - gemfiles/Gemfile.activerecord-4_0
+  - gemfiles/Gemfile.activerecord-4_1
