--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: ruby
 sudo: false
 rvm:
-  - 2.3.0
-  - 2.2.3
-  - 2.1.7
-  - 2.0.0
-  - 1.9.3
+  - 2.2.5
+  - 2.3.1
+gemfile:
+  - gemfiles/rails_4.2.gemfile
+  - gemfiles/rails_5.0.gemfile
