--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: ruby
 sudo: false
 rvm:
-  - 2.4
-  - 2.5
   - 2.6
+  - 2.7
+  - 3.0
 before_install:
   - gem update --system
 gemfile:
-  - gemfiles/rails_4.2.gemfile
-  - gemfiles/rails_5.0.gemfile
-  - gemfiles/rails_5.1.gemfile
-  - gemfiles/rails_5.2.gemfile
+  - gemfiles/rails_6.0.gemfile
+  - gemfiles/rails_6.1.gemfile
+  - gemfiles/rails_master.gemfile
